// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper Text Component should render a default helper text 1`] = `
<span
  class="HelperText__defaultHelperText-sc-4k037i-0 iJGOzB"
  data-testid="helper-text-component-test"
>
  Help text goes here
</span>
`;

exports[`Helper Text Component should render a error helper text 1`] = `
<span
  class="HelperText__defaultHelperText-sc-4k037i-0 HelperText__errorHelperText-sc-4k037i-1 iJGOzB ewRCez"
  data-testid="helper-text-component-test"
>
  Error text goes here
</span>
`;
